<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/collections"
        android:icon="@drawable/collection"
        android:showAsAction="ifRoom|withText"
        android:title="@string/collections">
        <menu>
        <item
            android:id="@+id/workingassets"
            android:showAsAction="never"
            android:title="@string/workingassets"/>
        <item
            android:id="@+id/projects"
            android:showAsAction="never"
            android:title="@string/projects"/>
        <item
            android:id="@+id/folder"
            android:showAsAction="never"
            android:title="@string/folder"/>
        <item
            android:id="@+id/search"
            android:showAsAction="never"
            android:title="@string/search"/>
        <item
            android:id="@+id/report"
            android:showAsAction="never"
            android:title="@string/report"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_overflow">
        <menu>
            <item
                android:id="@+id/home"
                android:showAsAction="never"
                android:title="@string/home"/>
            <item
                android:id="@+id/admin"
                android:showAsAction="never"
                android:title="@string/admin"/>
            <item
                android:id="@+id/profile"
                android:showAsAction="never"
                android:title="@string/profile"/>
            <item
                android:id="@+id/theme"
                android:showAsAction="never"
                android:title="@string/theme"/>
            <item
                android:id="@+id/help"
                android:showAsAction="never"
                android:title="@string/help"/>
            <item
                android:id="@+id/logout"
                android:showAsAction="never"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>