<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfilePasswordFragment" >

    <TextView
        android:id="@+id/textViewNewPassword"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/newpassword" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewVerifyPassword"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="@string/verifypassword" />

    <EditText
        android:id="@+id/editTextVerifyPassword"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_column="0"
        android:layout_columnSpan="3"
    	android:layout_width="match_parent"
        android:layout_row="2"
        android:text="@string/update" >

        <requestFocus />
    </Button>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_column="0"
        android:layout_columnSpan="3"
    android:layout_width="match_parent"
        android:layout_row="3"
        android:text="@string/cancel" />

</GridLayout>