<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ProfileAccountFragment" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewDisplayName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/displayname" />

            <EditText
                android:id="@+id/editTextDisplayName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/title" />

            <Spinner
                android:id="@+id/spinnerTitle"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewBirthDate"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/birthdate" />

            <EditText
                android:id="@+id/editTextBirthDate"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewIC"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/ic" />

            <EditText
                android:id="@+id/editTextIC"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <View
                android:layout_width="0px"
                android:layout_height="1dip"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/dividerVertical" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.45"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                android:text="@string/update" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="0.45"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                android:text="@string/cancel" />
        </TableRow>
    </TableLayout>

</ScrollView>