<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/username"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/password"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_row="2"
        android:onClick="onClick"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_row="3"
        android:text="@string/button_cancel" />

    </GridLayout>